fix scroll on mobile

--- a/src/style/WeatherDetail.css
+++ b/src/style/WeatherDetail.css
@@ -35,6 +35,7 @@
 
     -ms-overflow-style: none;
     scrollbar-width: none;
+    position:unset;
 
 
   }
